...
        VStack(spacing: DS.Spacing.xxl) {
            // Name field
            TextField(L10n.Favorites.namePlaceholder, text: $name)
                .font(DS.Typography.headline)
                .foregroundStyle(.primary)
                .multilineTextAlignment(.center)
                .accessibilityIdentifier("favorite_name_field")
                .focused($isNameFieldFocused)
                .padding(.horizontal, DS.Spacing.xxxxl)
                .tint(Color.primary)

            // Description field
            TextField(L10n.Favorites.descriptionPlaceholder, text: $note)
...
